// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Badge accept jsx as children 1`] = `
<span
  className="css-17jd12v"
>
  <span>
    string
  </span>
</span>
`;

exports[`Badge danger 1`] = `
<span
  className="css-1xkb6f6"
>
  danger
</span>
`;

exports[`Badge default 1`] = `
<span
  className="css-17jd12v"
>
  default
</span>
`;

exports[`Badge outline 1`] = `
<span
  className="css-1igcvpd"
>
  outline
</span>
`;

exports[`Badge primary 1`] = `
<span
  className="css-9w8rex"
>
  primary
</span>
`;

exports[`Badge success 1`] = `
<span
  className="css-xix1un"
>
  success
</span>
`;

exports[`Badge warning 1`] = `
<span
  className="css-qzihl3"
>
  warning
</span>
`;
